--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -72,6 +72,7 @@
 @import 'sections/premium/select/header.scss';
 @import 'sections/premium/select/slider.scss';
 @import 'sections/premium/select/dots.scss';
+@import 'sections/premium/select/ui.scss';
 @import 'sections/premium/select/sections.scss';
 
 // blog
