--- a/views/index.html
+++ b/views/index.html
@@ -47,6 +47,7 @@
     <script src="/public/js/app.js"></script>
     <script src="/public/js/sections/premiumSelect.js"></script>
     <script src="/public/js/sections/samples.js"></script>
+    <script src="/assets/js/store/resume/premium/colors.js"></script>
     <!-- <script src="/assets/js/plugins/screens.js"></script>
     <script src="/public/js/sections/home.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
