--- a/views/production/layouts/basic.html
+++ b/views/production/layouts/basic.html
@@ -23,17 +23,18 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/favicons/152.png">
     <link rel="manifest" href="/manifest/{% block manifest %}home{% endblock %}.json">
     <link id="styles" rel="stylesheet" href="{% block styles %}{% endblock %}">
+    {% block prefetch %}{% endblock %}
 </head>
 {% block body %}{% endblock %}
 {% block counters %}
-<!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter27428363 = new Ya.Metrika({ id:27428363, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, ut:"noindex" }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/27428363?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+<!-- <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter27428363 = new Ya.Metrika({ id:27428363, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, ut:"noindex" }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/27428363?ut=noindex" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
     google_ad_client: "ca-pub-1937781665222406",
     enable_page_level_ads: true
   });
-</script>
+</script>-->
 {% endblock %}
 </body>
 </html>
