--- a/views/workflow.html
+++ b/views/workflow.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div class="menu" data-open="false">
+    <!-- <div class="menu" data-open="false">
         <div class="menu__close"></div>
         <div class="menu__items">
             <div class="menu__item">
@@ -64,7 +64,7 @@
                 <a class="menu__item__link" href="/blog">Блог</a>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="control__device" data-ripple>
         <div class="control__device__item"></div>
