--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,12 @@
 
 {% block styles %}/public/css/style{% if device == 'phone' %}.mobile{% endif %}.css{% endblock %}
 
+{% block prefetch %}
+    <link rel="prefetch" href="/premium/samples">
+    <link rel="prefetch" href="/premium/mobile">
+    <link rel="prefetch" href="/premium/">
+{% endblock %}
+
 {% block body %}
 <body id="renderSide"{% if device == 'phone' %} class="appLoading"{% endif %} class="appLoading">
 
@@ -39,17 +45,9 @@
 
     <!--/ VENDORS /-->
     <script src="/public/js/libs.js"></script>
-    <script src="/assets/js/libs/typeahead/dist/typeahead.bundle.min.js"></script>
 
     <!--/ templates /-->
     <script src="/public/js/templates.js"></script>
-    <script src="/assets/templates/modules/player.html" type="riot/tag"></script>
-    <script src="/public/templates/default/samples/sampleContent.tag" type="riot/tag"></script>
-    <script src="/public/templates/default/samples/samplesItems.tag" type="riot/tag"></script>
-    <script src="/public/templates/default/samples/samplesAlphabet.tag" type="riot/tag"></script>
-    <script src="/public/templates/default/samples/samplesClusters.tag" type="riot/tag"></script>
-    <script src="/public/templates/client/samples/samplePage.html" type="riot/tag"></script>
-    <script src="/public/templates/client/samples/sampleModal.html" type="riot/tag"></script>
 
     <!--/ JS components /-->
     <script src="/public/js/app.js"></script>
@@ -61,11 +59,6 @@
     <script src="/public/js/sections/samples.js"></script>
     <script src="/public/js/sections/sample.js"></script>
     <script src="/public/js/sections/nav.js"></script>
-    <script src="/assets/js/components/features/samples.js"></script>
-    <script src="/assets/js/components/features/premium.js"></script>
-    <script src="/assets/js/components/features/fireworks.js"></script>
-    <script src="/assets/js/store/samples.js"></script>
-    <script src="/assets/js/store/resume/premium/colors.js"></script>
     <!-- <script src="/assets/js/plugins/screens.js"></script>
     <script src="/public/js/sections/home.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
